Changes ArrayList to LinkedList